fix: added test for ci

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "angular-cloudia-frontend",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "license": "MIT License",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
