--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -36,5 +36,14 @@ jobs:
 
           chmod +x codecov
           ./codecov -t ${CODECOV_TOKEN}
+      
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Container image
+        run: docker build -t ${{ secrets.DOCKER_REPO }}:latest .
+        
+      - name: Publish Docker image
+        run: docker push ${{ secrets.DOCKER_REPO }}
                 
       - uses: actions/checkout@master
