--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,13 +1,19 @@
-client_max_body_size 0;
-server_tokens off;
-server_names_hash_bucket_size 64;
+  server {
+	  include /etc/nginx/extra-conf.d/*.conf;
 
-server {
-  listen 80;
-  server_name localhost;
-  location / {
-    root /usr/share/nginx/html;
-    index index.html;
-    try_files $uri $uri/ /index.html;
-    }    
-}
+	  listen 80;
+	  server_name cloudia-frontend;
+
+	  location / {
+		root /usr/share/nginx/html;
+		index index.html index.htm;
+		try_files $uri $uri/ /index.html =404;
+	  }
+
+	  location /api/ {
+
+		proxy_pass http://cloudia-backend:3000;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    	proxy_set_header Host $http_host;
+	  }
+	}
