--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,9 +8,12 @@
 		root /usr/share/nginx/html;
 		index index.html index.htm;
 		try_files $uri $uri/ /index.html =404;
+	  }
+
+	  location /auth/ {
+
 		proxy_pass http://cloudia-backend:3000;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     	proxy_set_header Host $http_host;
 	  }
-
 	}
