--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-cloudia-frontend",
+  "name": "cloudia-ui",
   "version": "0.0.1",
   "license": "MIT License",
   "scripts": {
@@ -9,7 +9,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "cypress:open": "cypress open",
-    "docker:build": "npm install && ng build && docker build -t angular-cloudia-frontend ."
+    "db:clean": "docker exec $(docker ps | grep cloudia-database | awk '{print $1}') psql -U postgres -d cloudia-db -c 'DELETE FROM \"Users\"; DELETE FROM \"AwsSimple\";'",
+    "docker:build": "npm install && ng build && docker build -t cloudia-ui:latest ."
   },
   "private": true,
   "dependencies": {
