--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "cypress:open": "cypress open",
+    "cypress:run" : "cypress run",
     "db:clean": "docker exec $(docker ps | grep cloudia-database | awk '{print $1}') psql -U postgres -d cloudia-db -c 'DELETE FROM \"Users\"; DELETE FROM \"AwsSimple\";'",
-    "docker:build": "npm install && ng build && docker build -t cloudia-ui:latest ."
+    "docker:build": "npm install & ng build && docker build -t cloudia-ui:latest ."
   },
   "private": true,
   "dependencies": {
