--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -10,40 +10,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    # Service containers to run with `container-job`
-    services:
-      # Label used to access the service container
-      cloudia-database:
-        # Docker Hub image
-        image: postgres
-        # Provide the password for postgres
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: cloudia-db
-        # Set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
-
-      # Label used to access the service container
-      cloudia-backend:
-        # Docker Hub image
-        image: michaelxschneider/cloudia-app:latest
-        # Provide the password for postgres
-        env:
-          DATABASE_URL: postgresql://postgres:postgres@cloudia-database:5432/cloudia-db?schema=public
-          JWT_SECRET: 'topsecret'
-          AWS_SIMPLE_API: 'https://ec2.shop'
-          ADMIN_MAIL: 'admin@admin.de'
-          ADMIN_PWD: 'top_secret'
-        ports:
-          - 3000:3000
-
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js 16.x
@@ -55,11 +21,8 @@ jobs:
       - name: Setup
         run: npm ci
 
-      - name: Cypress run
-        uses: cypress-io/github-action@v2
-        with:
-          build: npm run build
-          start: npm start
+      - name: Build
+        run: npm run build --if-present
 
       - name: Test
         run: |
