--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -52,5 +52,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
+          context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ secrets.DOCKER_REPO }}
