--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,4 +16,11 @@
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     	proxy_set_header Host $http_host;
 	  }
+
+	  location /users/ {
+
+    proxy_pass http://cloudia-backend:3000;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+    }
 	}
