--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
-    "autoprefixer": "^10.4.4",
+    "autoprefixer": "10.4.5",
     "cypress": "^9.7.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
