improvement: added ssl support in development

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:https": "ng serve --ssl --ssl-key ssl/localhost.key --ssl-cert ssl/localhost.crt",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+
     "test:coverage": "ng test --code-coverage",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
