--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,22 +5,24 @@
 	  server_name cloudia-frontend;
 
 	  location / {
-		root /usr/share/nginx/html;
-		index index.html index.htm;
-		try_files $uri $uri/ /index.html =404;
+		alias /usr/share/nginx/html/en/;
+		try_files $uri$args $uri$args/ /en/index.html =404;
+	  }
+
+	  location /at/ {
+		alias /usr/share/nginx/html/de-AT/;
+		try_files $uri$args $uri$args/ /de-AT/index.html =404;
 	  }
 
 	  location /auth/ {
-
-		proxy_pass http://cloudia-backend:3000;
+		proxy_pass http://cloudia-backend:3000$request_uri;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     	proxy_set_header Host $http_host;
-	  }
+	   }
 
 	  location /users/ {
-
-    proxy_pass http://cloudia-backend:3000;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Host $http_host;
-    }
+    	proxy_pass http://cloudia-backend:3000$request_uri;
+    	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      	proxy_set_header Host $http_host;
+       }
 	}
