--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,4 +1,4 @@
-  server {
+	server {
 	  include /etc/nginx/extra-conf.d/*.conf;
 
 	  listen 80;
@@ -15,13 +15,13 @@
 	  }
 
 	  location /auth/ {
-		proxy_pass http://cloudia-backend:3000$request_uri;
+		proxy_pass http://cloudia-backend:3000;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     	proxy_set_header Host $http_host;
 	   }
 
 	  location /users/ {
-    	proxy_pass http://cloudia-backend:3000$request_uri;
+    	proxy_pass http://cloudia-backend:3000;
     	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       	proxy_set_header Host $http_host;
        }
