--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,15 +14,10 @@
 		try_files $uri$args $uri$args/ /de-AT/index.html =404;
 	  }
 
-	  location /auth/ {
+	  location /v1/ {
 		proxy_pass http://cloudia-backend:3000;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     	proxy_set_header Host $http_host;
 	   }
 
-	  location /users/ {
-    	proxy_pass http://cloudia-backend:3000;
-    	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      	proxy_set_header Host $http_host;
-       }
 	}
