--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,9 +15,8 @@
 	  }
 
 	  location /v1/ {
-		proxy_pass http://cloudia-backend:3000;
+		proxy_pass http://cloudia-backend:3000/v1;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     	proxy_set_header Host $http_host;
 	   }
-
 	}
