fix: docker compose deployment

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,8 +14,49 @@
 		try_files $uri$args $uri$args/ /de-AT/index.html =404;
 	  }
 
-	  location /v1/ {
-		proxy_pass http://cloudia-backend:3000/v1;
+	  location /authentication/ {
+		proxy_pass http://cloudia-backend:3000;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    	proxy_set_header Host $http_host;
+	   }
+
+	  location /user/ {
+		proxy_pass http://cloudia-backend:3000;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    	proxy_set_header Host $http_host;
+	   }
+
+	  location /country/ {
+		proxy_pass http://cloudia-backend:3000;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    	proxy_set_header Host $http_host;
+	   }
+
+	  location /history/ {
+		proxy_pass http://cloudia-backend:3000;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    	proxy_set_header Host $http_host;
+	   }
+
+	  location /history {
+		proxy_pass http://cloudia-backend:3000;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    	proxy_set_header Host $http_host;
+	   }
+
+	  location /azure/ {
+		proxy_pass http://cloudia-backend:3000;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    	proxy_set_header Host $http_host;
+	   }
+	  location /aws/ {
+		proxy_pass http://cloudia-backend:3000;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    	proxy_set_header Host $http_host;
+	   }
+
+	  location /gcp/ {
+		proxy_pass http://cloudia-backend:3000;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     	proxy_set_header Host $http_host;
 	   }
