--- a/package.json
+++ b/package.json
@@ -18,39 +18,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.9",
-    "@angular/common": "^15.2.9",
-    "@angular/compiler": "^15.2.9",
-    "@angular/core": "^15.2.9",
-    "@angular/forms": "^15.2.9",
-    "@angular/platform-browser": "^15.2.9",
-    "@angular/platform-browser-dynamic": "^15.2.9",
-    "@angular/router": "^15.2.9",
-    "chart.js": "^3.8.0",
-    "chartjs-plugin-datalabels": "^2.0.0",
+    "@angular/animations": "^16.2.1",
+    "@angular/common": "^16.2.1",
+    "@angular/compiler": "^16.2.1",
+    "@angular/core": "^16.2.1",
+    "@angular/forms": "^16.2.1",
+    "@angular/platform-browser": "^16.2.1",
+    "@angular/platform-browser-dynamic": "^16.2.1",
+    "@angular/router": "^16.2.1",
+    "chart.js": "^4.3.3",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "jwt-decode": "^3.1.2",
-    "ng2-charts": "^3.1.2",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "ng2-charts": "^5.0.3",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.6.2",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.9",
-    "@angular/cli": "^15.2.9",
-    "@angular/compiler-cli": "^15.2.9",
-    "@angular/localize": "^15.2.9",
-    "@tailwindcss/forms": "^0.5.0",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular/cli": "^16.2.0",
+    "@angular/compiler-cli": "^16.2.1",
+    "@angular/localize": "^16.2.1",
+    "@tailwindcss/forms": "^0.5.4",
+    "@types/jasmine": "~4.3.5",
+    "@types/node": "^20.5.1",
     "cypress": "^9.7.0",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.23",
-    "typescript": "~4.9.3"
+    "jasmine-core": "~5.1.0",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.1.6"
   }
 }
